# dcathlon

./: .gitignore  README.md  config.yaml.example  pyproject.toml  run.py
src/dca/: __init__.py  coingecko.py  main.py  price_fetcher.py
